# fix-analyzer

./: .gitignore  alembic.ini  pyproject.toml
database/: __init__.py  connection.py  models.py  repository.py  schema.sql  test_smoke.py
database/migrations/: 001_initial_schema.sql  002_add_fill_price.sql
database/migrations/alembic/: env.py
database/migrations/alembic/versions/: 73b2713c876c_initial_schema.py
parser/: analyzer.py  notifier.py  parser.py  pyproject.toml
scripts/: cron_ingest.sh  monitor.sh  test_anomalies.py
