[project]
name = "fix-parser"
version = "0.1.0"
description = "FIX protocol log parser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
fix-parser = "parser:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["parser.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
